# p2p-messenger

./: Cargo.toml
src/: config.rs  error.rs  lib.rs  main.rs  telemetry.rs
src/crypto/: e2ee.rs  identity.rs  keystore.rs  mod.rs
src/messaging/: delivery.rs  mod.rs  service.rs  types.rs
src/network/: discovery.rs  gossip.rs  mod.rs  node.rs  protocol.rs
src/storage/: contacts.rs  db.rs  messages.rs  mod.rs
src/sync/: crdt.rs  mod.rs
src/tests/: integration_test.rs
src/ui/: app.rs  events.rs  mod.rs
src/ui/components/: chat.rs  input.rs  mod.rs  sidebar.rs  theme.rs
